# ulysses-optimizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: 1_sbert_examples.ipynb
otimizador/: __init__.py  utils.py
otimizador/sbert/: __init__.py  core.py  models.py
tests/: conftest.py  test_sbert_quantization.py
