[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "otimizador"
version = "1.0.1"
description = "Optimization methods for Ulysses pretrained models."
authors = [
    {name="felsiq", email= "felipe.siqueira@usp.br"}
]

requires-python = ">=3.8"

dependencies = [
    "tqdm >= 4.64.0",
    "optimum[onnxruntime] >= 1.6.4",
    "onnxruntime >= 1.12.1",
    "numpy >= 1.21.6",
    "transformers >= 4.6.2,<5.0.0",
    "regex >= 2021.4.4",
    "colorama >= 0.4.4",
]

[project.optional-dependencies]
sentence = [
    "sentence-transformers >= 2.2.0",
]

dev = [
    "black == 23.1.0",
    "tox == 3.24.5",
    "mypy == 1.0.0",
    "pylint == 2.13.5",
    "pytest == 7.1.0",
    "pytest-cov == 3.0.0",
    "pytest-html == 3.1.1",
    "pytest-socket == 0.5.1",
    "grip == 4.6.0",
    "buscador @ git+https://github.com/ulysses-camara/ulysses-fetcher@v1.2.3",
]

[tool.mypy]
ignore_missing_imports = true
strict_equality = true
show_error_codes = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
warn_redundant_casts = true
warn_incomplete_stub = true
non_interactive = true
install_types = true

[tool.pytest.ini_options]
addopts = """
    --cov=otimizador
    --failed-first
    --new-first
    --cov-report=html
"""
testpaths = [
    "tests",
]

[tool.pylint.messages_control]
generated-members = "torch.*,optimum.onnxruntime.*"
jobs = 4
disable = """
    too-few-public-methods,
    too-many-locals,
    too-many-arguments,
    too-many-statements,
    too-many-branches,
    import-outside-toplevel,
    too-many-ancestors
"""
min-similarity-lines=10

[tool.black]
line-length=100

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37, py39, mypy, pylint
isolated_build = true
[gh-actions]
python =
    3.8: py37, mypy, pylint
    3.9: py39
[testenv]
whitelist_externals = flit
commands =
    pip install .
    pip install '.[dev, sentence]'
    python -m pytest
[testenv:mypy]
basepython = python3.8
deps = mypy
commands =
    python -m mypy --install-types --non-interactive otimizador/
    python -m mypy otimizador/
[testenv:pylint]
basepython = python3.8
deps =
    pylint
    pytest
    pytest_socket
    sentence_transformers
    buscador @ git+https://github.com/ulysses-camara/ulysses-fetcher@v1.2.3
commands =
    python -m pylint --disable='missing-function-docstring' tests/
    python -m pylint otimizador/
"""
